# Intel_API-P-

./: .env  README.md  main.py  mainbackup.py  pyproject.toml  schemas.py
ml/: ad.pkl  advertising.py
