[project]
name = "intel-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]
